[package]
name = "mb-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luiz@bipa.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mb"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.7", features = ["json", "blocking"]}
serde_json = "1.0.55"
hex = "0.4.2"
hmac = "0.8.0"
sha2 = "0.9.0"
serde_urlencoded = "0.6.1"
serde_repr = "0.1"
failure = "0.1.1"

[dependencies.serde]
version = "1.0.112"
features = ["derive"]

