[package]
name = "mb-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luiz@bipa.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mb"

[dependencies]
serde_json = "1.0"
hex = "0.4"
hmac = "0.11"
sha2 = "0.9"
serde_urlencoded = "0.7"
serde_repr = "0.1"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
